# onvif_tool

./: Makefile.am  README  configure.ac  main.cpp  onvif.h.patch
